--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "-",
   "private": true,
-  "proxy":4500,
+  "proxy": 4500,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "redux": "^4.2.0"
   },
   "devDependencies": {
